--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,7 +4,7 @@ header{
     height: 70px;
     width: 100%;
     border-bottom:  1px solid #CCCCCC;
-    background-image: url("/AirBnB_clone_o/web_static/images/logo.png");
+    background-image: url("images/logo.png");
     background-repeat: no-repeat;
     background-position: 20px;
 
