--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -80,3 +80,12 @@
   .popover ul { /* Style nested ul for cities */
     padding: 10px; /* Add padding for the nested list */
   }
+  .locations li h2 {
+    font-size: 16px;
+    margin: 10px; /* Add some margin for the state name */
+  }
+  
+  .popover li { /* Remove bullet points and style list items */
+    list-style-type: none;
+    padding: 5px; /* Add some padding for readability */
+  }
